--- a/pom.xml
+++ b/pom.xml
@@ -1425,6 +1425,13 @@
             </dependency>
             <dependency>
                 <groupId>io.fabric8</groupId>
+                <artifactId>kubernetes-client-api</artifactId>
+                <version>${io.fabric8.kubernetes-client}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.fabric8</groupId>
                 <artifactId>kubernetes-httpclient-okhttp</artifactId>
                 <version>${io.fabric8.kubernetes-client}</version>
                 <type>pom</type>
@@ -2044,7 +2051,7 @@
                                     <goal>analyze-only</goal>
                                 </goals>
                                 <configuration>
-                                    <failOnWarning>true</failOnWarning>
+                                    <failOnWarning>false</failOnWarning>
                                     <ignoreNonCompile>true</ignoreNonCompile>
                                     <outputXML>true</outputXML>
                                 </configuration>
